--- a/tox.ini
+++ b/tox.ini
@@ -221,6 +221,9 @@ whitelist_externals =
 passenv = DOCKER_*
 
 [testenv:integration]
+# If any new settings other than commands or passenv are set below, they need
+# to propagated to the testenv py39-integration until
+# https://github.com/certbot/certbot/issues/8384 is fixed.
 commands =
     {[base]pip_install} acme certbot certbot-nginx certbot-ci
     pytest certbot-ci/certbot_integration_tests \
@@ -230,6 +233,13 @@ commands =
     coverage report --include 'certbot/*' --show-missing --fail-under=65
     coverage report --include 'certbot-nginx/*' --show-missing --fail-under=74
 passenv = DOCKER_*
+
+[testenv:py39-integration]
+# This tox environment just exists to put py39 in the environment name which
+# earlier in the file we configured to boostrap pip, setuptools, and wheel
+# differently.
+commands = {[testenv:integration]commands}
+passenv = {[testenv:integration]passenv}
 
 [testenv:integration-certbot]
 commands =
